  * Behavior change: `--noincluderc` now skips gcalclirc files unconditionally,
    w/ or w/o --config-folder
    - POSSIBLE ACTION REQUIRED: Use `@path/to/gcalclirc` explicitly if it stops
      reading an rc file you needed
  * The `import` command now dumps events it couldn't import into a tmp rej.ics
    file in a tmp directory for convenient retries
  * Determine date format to use based on system locale's in "When" inputs
  * Respect locally-installed certificates (ajkessel)
  * Re-add a `--noauth_local_server` to provide instructions for authenticating
    from a remote system using port forwarding
  * Migrate data files like ~/.gcalcli_oauth into standard data file paths
    (with fallback to migrate detected files into the new paths)
  * Add support for $GCALCLI_CONFIG env var and deprecate --config-folder

v4.4.0
  * Fix lots of bugs by switching from deprecated oauth2client to
    google_auth_oauthlib
  * Friendlier help output when `import` command is missing vobject extra
  * `import` command more gracefully handles existing events to avoid duplicates
    and unnecessary edits (tsheinen, cryhot)
  * Handle encoding/decoding errors more gracefully by replacing with
    placeholder chars instead of blowing up
  * Fix `--lineart` option failing with unicode errors
  * `quick` command now prompts for which calendar to use when ambiguous
  * Fix `--nodeclined` option failing on events with aliased email
  * Fix event list commands like `agenda` returning some events that don't
    actually match their search criteria due to pagination bug (kbulygin)
  * `add` command now supports `--end` as an alternative to `--duration`
    (michaelPotter)

v4.3.0
  * Adds 'conference' to details display (michaelhoffman)

v4.2.1
  * Remove python2 support
  * Allow flexible notion for durations (flicken) 
  * new `conflicts` command (flicken)
  * Fixed issue when locale.nl_langinfo isn't available